--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ pydantic_core==2.41.5
 python-dotenv==1.2.1
 python-multipart==0.0.20
 PyYAML==6.0.3
+redis==7.1.0
 requests==2.32.5
 rsa==4.9.1
 starlette==0.50.0
