--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,12 @@ charset-normalizer==3.4.4
 click==8.3.1
 fastapi==0.123.5
 google-auth==2.43.0
-google-genai==1.52.0
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
 idna==3.11
+openai
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.12.5
